# claude-universal-custom-proxy

./: .env.example  .gitattributes  .gitignore  .mailmap-rewrite  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SETUP.md  manifest.json  package-lock.json  package.json  proxy.mjs  pyproject.toml  start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  release.yml  security.yml
config/: default.yaml
deployment/: docker-compose.ollama.yml  docker-compose.yml
deployment/launchd/: README.md  com.siddhartha-kumar.claude-universal-custom-proxy.plist
deployment/nginx/: llm-gateway.conf
deployment/systemd/: llm-gateway.service
deployment/windows/: README.md  install-service.ps1
docker/: Dockerfile
docs/: api-examples.md  architecture.md  branching-strategy.md  claude-code-integration.md  configuration.md  contributing.md  deployment.md  environment.md  local-development.md  platforms.md  providers.md  security.md  streaming.md  troubleshooting.md
examples/curl/: README.md  chat.sh  models.sh  stream.sh
examples/powershell/: README.md  chat.ps1  models.ps1  stream.ps1
examples/python/: README.md  _common.py  chat_completion.py  list_models.py  stream_chat.py
scripts/: build-mcpb.mjs  check.ps1  discover-models.mjs  generate-registry.mjs  install-launch-agent.mjs  probe-models.mjs  real-upstream-smoke.mjs  run-launch-agent.sh  uninstall-launch-agent.mjs
server/: index.mjs
src/llm_proxy_gateway/: __init__.py  __main__.py  main.py
src/llm_proxy_gateway/api/: routes.py
src/llm_proxy_gateway/config/: __init__.py  settings.py
src/llm_proxy_gateway/core/: __init__.py  anthropic_translator.py  errors.py  http.py  security.py
src/llm_proxy_gateway/middleware/: __init__.py  auth.py  body_limit.py  rate_limit.py  request_context.py  security_headers.py
src/llm_proxy_gateway/models/: __init__.py  anthropic.py  openai.py
src/llm_proxy_gateway/observability/: __init__.py  context.py  logging.py  metrics.py
src/llm_proxy_gateway/providers/: __init__.py  base.py  factory.py  ollama.py  openai_compatible.py
src/llm_proxy_gateway/routing/: __init__.py  registry.py  router.py
test/: e2e-routing.test.mjs  proxy.test.mjs
tests/: conftest.py
tests/integration/: test_anthropic_messages_api.py  test_api.py
tests/unit/: test_anthropic_translator.py  test_config.py  test_factory.py  test_middleware.py  test_observability.py  test_ollama_provider.py  test_openai_provider.py  test_provider_retry.py  test_registry.py  test_routing.py  test_security.py
